Sidebar alignment fixes

--- a/ServerlessLibraryAPI/ClientApp/src/components/Main/Main.css
+++ b/ServerlessLibraryAPI/ClientApp/src/components/Main/Main.css
@@ -7,7 +7,7 @@
   overflow-y: auto;
   height: 100%;
   max-width: 15%;
-  padding: 10px;
+  min-width: 175px;
   background-color: #f9f9f9;
   box-shadow: 0px 0px 1.8px rgba(0, 0, 0, 0.12),
     0px 3.2px 3.6px rgba(0, 0, 0, 0.08);
